docker-main-master-f4fe57e21023db3e031fb3de8c881a2413eea8ba/environments/dev/pods/lb-nginx/lb-nginx-ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lb-nginx
  namespace: default
spec:
  rules:
  - host: dev.wtransnet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-nginx
          servicePort: 80
  - host: app-dev.wtransnet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-nginx
          servicePort: 80
      - path: /bridge-wtn3
        backend:
          serviceName: wtn-bridge-wtn3
          servicePort: 8080
      - path:  /tracking
        backend:
          serviceName: wtn-tracking
          servicePort: 8080
      - path: /auth
        backend:
          serviceName: wtn-auth
          servicePort: 8080
      - path: /file-upload
        backend:
          serviceName: wtn-file-upload
          servicePort: 8080
      - path: /remote-log
        backend:
          serviceName: wtn-remote-log
          servicePort: 8080
      - path: /credit
        backend:
          serviceName: wtn-credit
          servicePort: 8080
      - path: /geo-searcher
        backend:
          serviceName: wtn-geo-searcher
          servicePort: 8080
      - path: /audit
        backend:
          serviceName: wtn-audit
          servicePort: 8080
